2022-06-05  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* comm-mac.ch,
	* comm-mini.ch,
	* comm-ql.ch,
	* comm-w2c.ch,
	* comm-w2c.h,
	* common.h,
	* common.w,
	* ctang-bs.ch,
	* ctang-pc.ch,
	* ctang-ql.ch,
	* ctang-vms.ch,
	* ctang-w2c.ch,
	* ctang-w32.ch,
	* ctangle.c,
	* ctangle.w,
	* ctwill-w2c.ch,
	* cweav-bs.ch,
	* cweav-pc.ch,
	* cweav-ql.ch,
	* cweav-vms.ch,
	* cweav-w2c.ch,
	* cweav-w32.ch,
	* cweave.w,
	* cwebmac.tex,
	* cwebman-w2c.ch,
	* cwebman.tex,
	* po/cweb-tl.pot,
	* po/cweb.pot,
	* po/de/cweb-tl.po,
	* po/de/cweb.po,
	* po/it/cweb.po,
	* prod-cweave.w,
	* prod-twill.w,
	* prod.w: CWEB 4.8 release.

2022-06-05  Andreas Scherer  <https://ascherer.github.io>

	* cweave.w,
	* cwebman-w2c.ch,
	* cwebman.tex: Update borderline cases.

2022-06-04  Andreas Scherer  <https://ascherer.github.io>

	* cwebman.tex: Update codes in Appendices.

2022-05-31  Andreas Scherer  <https://ascherer.github.io>

	* common.w: Amend reference to COMMON interface.

2022-05-29  Andreas Scherer  <https://ascherer.github.io>

	* cweave.w: DRY up section 120.

2022-05-28  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-w2c.ch,
	* cweav-w2c.ch,
	* cweave.w,
	* prod-cweave.w,
	* prod-twill.w,
	* prod.w: Improve productions 33, 118, and 153.

2022-05-27  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-mini.ch,
	* ctwill-w2c.ch,
	* cweav-w2c.ch,
	* cweave.w,
	* prod-cweave.w,
	* prod-twill.w,
	* prod.w: Unambiguous prductions 83 and 121.

2022-05-23  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* ctwill-w2c.ch,
	* cweave.w,
	* prod-cweave.w,
	* prod.w: Fix production rule 117 similar to rule 35.

2022-05-03  Andreas Scherer  <https://ascherer.github.io>

	* cweave.w,
	* prod-cweave.w,
	* prod-twill.w,
	* prod.w: Use non-breaking thin space for simple cast.

2022-04-30  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-w2c.ch,
	* cweav-w2c.ch,
	* cweave.w: Fix a preprocessor issue (gb_io.w).
