@@ -203,3 +203,8 @@ tarfile: $(ALL) examples
 
 tarball:
 	tar zcvhf /tmp/cweb.tgz $(ALL) examples
+
+ctan:
+	git archive -o ~/cweb-4.8.zip --prefix=cweb/ cweb-4.8
+	make PDF=pdf usermanual
+	cd ..; zip -r ~/cweb-4.8.zip cweb/cwebman.pdf
